@@ -6,14 +6,14 @@
        url         = "http://www.monodevelop.com"
        description = "C/C++ Language binding"
        category    = "Language bindings"
-       version     = "2.2">
+       version     = "2.4">
 
 	<Dependencies>
-		<Addin id = "Core" version = "2.2"/>
-		<Addin id = "Ide" version = "2.2"/>
-		<Addin id = "Deployment" version = "2.2"/>
-		<Addin id = "Deployment.Linux" version = "2.2"/>
-		<Addin id = "SourceEditor2" version = "2.2" />
+		<Addin id = "Core" version = "2.4"/>
+		<Addin id = "Ide" version = "2.4"/>
+		<Addin id = "Deployment" version = "2.4"/>
+		<Addin id = "Deployment.Linux" version = "2.4"/>
+		<Addin id = "SourceEditor2" version = "2.4" />
 	</Dependencies>
 	
 	<Extension path = "/MonoDevelop/Core/StockIcons">
@@ -223,7 +223,7 @@
 	    </Runtime>
 	    
 		<Dependencies>
-			<Addin id = "MonoDevelop.Autotools" version = "2.2"/>
+			<Addin id = "MonoDevelop.Autotools" version = "2.4"/>
 		</Dependencies>
 		
 		<Extension path = "/Autotools/SimpleSetups">
