@@ -1,3 +1,8 @@
+2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AssemblyInfo.cs:
+	* CBinding.addin.xml: Bumped MD version.
+
 2010-03-18  Levi Bard  <levi@unity3d.com>
 
 	* Gui/DataProvider.cs: 
